<resources>
    <string name="app_name">Rentalku.co</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
	<string name="hallo">haklo</string>
    <string name="slide_1_title">Rentalku.co</string>
    <string name="slide_1_desc">Memudahkanmu</string>

    <string name="slide_2_title">Slide 2</string>
    <string name="slide_2_desc">Deskripsi!</string>

    <string name="slide_3_title">Slide 3</string>
    <string name="slide_3_desc">Deskripsi!</string>

    <string name="slide_4_title">Slide 4</string>
    <string name="slide_4_desc">Deskripsi!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
	
	<string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="dial_number">Dial a Number</string>
    <string name="data_received">Data Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
	
	<string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
	
	<string name="email_hint">Masukkan Email</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="signin">Masuk Yuk</string>
    <string name="signup_link">Belum Daftar? Yuk Daftar</string>
    <string name="forgot_password">Lupa Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="sign_up">Daftar Yuk</string>
    <string name="signin_link">Udah Punya Akun? Masuk Sini :)</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_password">Remember your password? Login</string>
	<string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <!--new-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Home</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">ZEE RENT</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="order_info">ORDER INFORMATION</string>
	<string name="order_info_barcode">UDAH SELESAI, TERIMA KASIH</string>
</resources>
