<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/bg_gradient"
	android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
		android:id="@+id/toolbarDaftar"
		android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_height="?attr/actionBarSize"  
		android:layout_width="match_parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:titleTextColor="@android:color/black"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Daftar Rentalku.co"
            android:id="@+id/toolbar_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </android.support.v7.widget.Toolbar>


	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/logo"
            android:src="@drawable/rentalkuco"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFF"/>
    
        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"		
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/namaLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_email_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wrapper_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/emailDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textVisiblePassword"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrapper_email_daftar"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/passwordDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrapper_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/confirm_passwordDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/wrapper_confirm_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignup"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/signin_link"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
