<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
			android:text="Yuk Masuk"
            android:textStyle="bold"
			android:layout_marginTop="96dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

		<de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
			android:id="@+id/logo"
			android:src="@drawable/rentalkuco"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin" 
            app:civ_border_width="2dp"
            app:civ_border_color="#FFF"
			/>
       

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textVisiblePassword"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/wrapper_email">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:clickable="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="36dp"
                android:text="@string/forgot_password" />
        </FrameLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/button"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

            <ImageButton
				android:layout_centerHorizontal="true" 
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:layout_width="150dp"
                android:layout_height="45dp"
				android:layout_below="@id/btnLogin"
                android:id="@+id/google_login"
                android:scaleType="fitCenter"
                android:layout_weight=".5"
                android:padding="0dp"
                android:src="@drawable/google_light"/>

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_login"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/signup_link"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

</ScrollView>
